{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 21,
  "lineage": "16d5d819-bade-05a7-0b69-c5fa6145e1c4",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-10-18T06:26:30.506-07:00",
            "deny": [],
            "description": "Allows HTTP traffic.",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/actual-475511/global/firewalls/allow-http",
            "log_config": [],
            "name": "allow-http",
            "network": "https://www.googleapis.com/compute/v1/projects/actual-475511/global/networks/vpc-network",
            "params": [],
            "priority": 1000,
            "project": "actual-475511",
            "self_link": "https://www.googleapis.com/compute/v1/projects/actual-475511/global/firewalls/allow-http",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "http-server"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-10-18T06:26:30.921-07:00",
            "deny": [],
            "description": "Allows HTTPS traffic.",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/actual-475511/global/firewalls/allow-https",
            "log_config": [],
            "name": "allow-https",
            "network": "https://www.googleapis.com/compute/v1/projects/actual-475511/global/networks/vpc-network",
            "params": [],
            "priority": 1000,
            "project": "actual-475511",
            "self_link": "https://www.googleapis.com/compute/v1/projects/actual-475511/global/firewalls/allow-https",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "https-server"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-10-18T06:26:30.466-07:00",
            "deny": [],
            "description": "Allows SSH from anywhere. Recommended to use only when absolutely necessary.",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/actual-475511/global/firewalls/allow-ssh",
            "log_config": [],
            "name": "allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/actual-475511/global/networks/vpc-network",
            "params": [],
            "priority": 1000,
            "project": "actual-475511",
            "self_link": "https://www.googleapis.com/compute/v1/projects/actual-475511/global/firewalls/allow-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "allow-ssh"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_ssh_proxy",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-10-18T06:26:30.618-07:00",
            "deny": [],
            "description": "Allows SSH from Google's Identity Aware Proxy (IAP)",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/actual-475511/global/firewalls/allow-ssh-proxy",
            "log_config": [],
            "name": "allow-ssh-proxy",
            "network": "https://www.googleapis.com/compute/v1/projects/actual-475511/global/networks/vpc-network",
            "params": [],
            "priority": 1000,
            "project": "actual-475511",
            "self_link": "https://www.googleapis.com/compute/v1/projects/actual-475511/global/firewalls/allow-ssh-proxy",
            "source_ranges": [
              "35.235.240.0/20"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "allow-ssh-proxy"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "container_host",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "allow_stopping_for_update": true,
            "attached_disk": [
              {
                "device_name": "persistent-disk-1",
                "force_attach": false,
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/actual-475511/zones/us-east1-b/disks/container-host-data-disk"
              }
            ],
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "force_attach": false,
                "guest_os_features": [
                  "SEV_SNP_CAPABLE",
                  "SEV_CAPABLE",
                  "UEFI_COMPATIBLE",
                  "TDX_CAPABLE",
                  "IDPF",
                  "SEV_LIVE_MIGRATABLE_V2",
                  "SEV_LIVE_MIGRATABLE",
                  "VIRTIO_SCSI_MULTIQUEUE",
                  "GVNIC"
                ],
                "initialize_params": [
                  {
                    "architecture": "X86_64",
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/cos-cloud/global/images/cos-117-18613-339-97",
                    "labels": {
                      "goog-terraform-provisioned": "true",
                      "managed_by": "terraform"
                    },
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/actual-475511/zones/us-east1-b/disks/container-host-boot-disk"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "creation_timestamp": "2025-10-18T06:30:57.586-07:00",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/actual-475511/zones/us-east1-b/instances/containerhost01",
            "instance_id": "6717170090537527422",
            "label_fingerprint": "vezUS-42LLM=",
            "machine_type": "e2-micro",
            "metadata": {
              "ssh-keys": "max.roulstone:",
              "user-data": "#cloud-config\n\"bootcmd\":\n- \"fsck.ext4 -tvy /dev/disk/by-id/google-persistent-disk-1\"\n- \"mkdir -p /mnt/disks/data\"\n- \"mount -t ext4 -o nodev,nosuid /dev/disk/by-id/google-persistent-disk-1 /mnt/disks/data\"\n- \"mkdir -p /mnt/disks/data/caddy\"\n- \"mkdir -p /mnt/disks/data/caddy/data\"\n- \"mkdir -p /mnt/disks/data/caddy/config\"\n- \"mkdir -p /mnt/disks/data/actual-data\"\n\"runcmd\":\n- \"docker network create custom-bridge\"\n- \"systemctl daemon-reload\ [...]
            },
            "metadata_fingerprint": "K2kXcCjpfHU=",
            "name": "containerhost01",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.211.194.108",
                    "network_tier": "STANDARD"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/actual-475511/global/networks/vpc-network",
                "network_ip": "10.142.0.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/actual-475511/regions/us-east1/subnetworks/vpc-network",
                "subnetwork_project": "actual-475511"
              }
            ],
            "project": "actual-475511",
            "scheduling": [
              {
                "automatic_restart": true,
                "availability_domain": 0,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/actual-475511/zones/us-east1-b/instances/containerhost01",
            "service_account": [
              {
                "email": "container-host-sa@actual-475511.iam.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "allow-ssh-proxy",
              "http-server",
              "https-server"
            ],
            "tags_fingerprint": "MYcmVlpmDrU=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "zone": "us-east1-b"
          },
          "dependencies": [
            "data.google_compute_image.container_optimized",
            "google_compute_disk.container_host_boot_disk",
            "google_compute_disk.container_host_data_disk",
            "google_compute_network.vpc_network",
            "google_service_account.container_host"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": true,
            "bgp_always_compare_med": false,
            "bgp_best_path_selection_mode": "LEGACY",
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/actual-475511/global/networks/vpc-network",
            "mtu": 0,
            "name": "vpc-network",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "network_id": "5179418030150396852",
            "numeric_id": "5179418030150396852",
            "project": "actual-475511",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/actual-475511/global/networks/vpc-network"
          }
        }
      ]
    }
  ]
}